# claude-orchestrator

./: .env.example  .gitignore  CLAUDE.md  PHASE1_TEST_RESULTS.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  PHASE5_RESULTS.md  README.md  docker-compose.yml  meta_agent_test_results.json  pyproject.toml  test_merge_orchestrator.py  test_meta_agent.py  test_quality_gates.py  test_worker_agent.py  test_worktree.py
backend/app/: config.py  database.py  main.py
backend/app/models/: agent.py  project.py  task.py
backend/git/: merge_strategy.py  worktree_manager.py
backend/llm/: bedrock_client.py  prompt_templates.py
backend/locking/: redis_lock.py
backend/orchestrator/: dependency_graph.py  merge_orchestrator.py  meta_agent.py  worker_agent.py
backend/orchestrator/specialized_agents/: __init__.py  backend_agent.py  docs_agent.py  frontend_agent.py  infra_agent.py  integration_agent.py  testing_agent.py
backend/quality/: __init__.py  lint_checker.py  security_scanner.py  syntax_validator.py  test_runner.py  type_checker.py  validators.py
backend/queue/: redis_queue.py
